InfoWindow titles can no longer wrap onto multiple lines.

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,9 @@ body {
 
 .window-content h3 {
 	margin-top: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .content-title {
